--- a/src/layouts/components/Modal/index.less
+++ b/src/layouts/components/Modal/index.less
@@ -23,7 +23,7 @@
                         border-radius: var(--radius_normal);
 
                         &:hover {
-                              background-color: var(--bg_hover_dark);
+                              background-color: var(--light_bg_hover);
                         }
 
                         .name {
