--- a/src/themes/skins/default.less
+++ b/src/themes/skins/default.less
@@ -48,6 +48,6 @@
       --color_unimportant_2: @color_unimportant_2;
       --radius_normal: @radius_normal;
 
-      --box-shadow-card: inset 0 5px 6px -3px rgba(0, 0, 0, .4);
-      --bg_hover_dark: rgba(0, 0, 0, 0.22);
+      --light_box_shadow_card: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1.5px -2px rgba(0, 0, 0, 0.1);
+      --light_bg_hover: rgba(0, 0, 0, 0.22);
 }
