--- a/src/layouts/components/Modal/index.less
+++ b/src/layouts/components/Modal/index.less
@@ -8,6 +8,7 @@
 
             .ant-modal-body {
                   padding: 0;
+                  background-color: white;
             }
 
             .setting_item {
