--- a/src/pages/index/components/Modal/index.less
+++ b/src/pages/index/components/Modal/index.less
@@ -1,5 +1,11 @@
-._local{
-      :global{
-            
+._local {
+      :global {
+            .answer {
+                  min-height: 600px;
+                  max-height: 80vh;
+            }
+            .ant-tag{
+                  background-color: white;
+            }
       }
 }
