--- a/src/pages/index/components/Qas/index.less
+++ b/src/pages/index/components/Qas/index.less
@@ -1,5 +1,9 @@
 ._local {
-      :global {}
+      :global {
+            .empty_wrap{
+                  padding: 120px 0;
+            }
+      }
 }
 
 .qa_item {
