--- a/src/layouts/components/Modal/index.less
+++ b/src/layouts/components/Modal/index.less
@@ -1,5 +1,9 @@
 ._local {
       :global {
+            .ant-modal-content {
+                  overflow: hidden;
+            }
+
             .ant-modal-header {
                   padding: 16px 20px;
                   background-color: whitesmoke;
@@ -31,6 +35,11 @@
                               margin-top: 6px;
                         }
                   }
+            }
+
+            .clear_wrap {
+                  padding: 20px;
+                  background-color: whitesmoke;
             }
       }
 }
