--- a/src/pages/index/components/Qas/index.less
+++ b/src/pages/index/components/Qas/index.less
@@ -42,14 +42,13 @@
             }
 
             .answer {
-
                   .content {
                         padding: 16px 20px;
-                        border-bottom: 1px solid whitesmoke;
                   }
 
                   .a_foot {
                         padding: 16px 20px;
+                        background-color: whitesmoke;
                   }
             }
       }
