--- a/src/pages/index/components/Qas/index.less
+++ b/src/pages/index/components/Qas/index.less
@@ -1,8 +1,18 @@
 ._local {
       :global {
-            .empty_wrap{
+            .empty_wrap {
                   padding: 120px 0;
             }
+      }
+}
+
+@keyframes show_answer {
+      from {
+            transform: scale(0);
+      }
+
+      to {
+            transform: scale(1);
       }
 }
 
@@ -38,14 +48,20 @@
                   .q_foot {
                         padding-top: 0;
                         padding-bottom: 10px;
+                        
                   }
             }
+      }
 
-            .answer {
-                  .content {
-                        padding: 16px 20px;
-                  }
+      .answer {
+            .content {
+                  transform-origin: top;
+                  animation: show_answer 0.3s;
+                  padding: 16px 20px;
+                  border-top: 1px solid whitesmoke;
+            }
 
+            :global {
                   .a_foot {
                         padding: 16px 20px;
                         background-color: whitesmoke;
