[add] adapt for mobile

--- a/src/layouts/components/Header/index.less
+++ b/src/layouts/components/Header/index.less
@@ -11,6 +11,17 @@
       }
 
       :global {
+            .input_search {
+                  width: 680px;
+                  border: none;
+            }
+
+            @media screen and (max-width:420px) {
+                  .input_search {
+                        width: 60vw;
+                  }
+            }
+
             .right {
                   .icon_wrap {
                         width: 40px;
