--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -1,4 +1,12 @@
 .container {
       width: 680px;
       padding: 30px 0;
+      box-sizing: border-box;
+}
+
+@media screen and (max-width:840px) {
+      .container {
+            width: 100%;
+            padding: 30px 16px;
+      }
 }
