[fix] fix add qa modal style

--- a/src/pages/index/components/Modal/index.less
+++ b/src/pages/index/components/Modal/index.less
@@ -1,7 +1,7 @@
 ._local {
       :global {
             .answer {
-                  min-height: 600px;
+                  min-height: 50vh;
                   max-height: 80vh;
             }
             .ant-tag{
