[add] use react-virtualized to render qa list

--- a/src/layouts/components/Header/index.less
+++ b/src/layouts/components/Header/index.less
@@ -8,6 +8,10 @@
 
       &.scrolled {
             box-shadow: 0 0 10px #666;
+
+            @media screen and (max-width:420px) {
+                  box-shadow: none;
+            }
       }
 
       :global {
