--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -7,6 +7,7 @@
 @media screen and (max-width:840px) {
       .container {
             width: 100%;
-            padding: 30px 16px;
+            padding: 30px 12px;
+            padding-bottom: 60px;
       }
 }
