[add] inifinite scroll load data

--- a/src/pages/index/components/Qas/index.less
+++ b/src/pages/index/components/Qas/index.less
@@ -12,6 +12,12 @@
                         overflow: visible !important;
                   }
             }
+
+            .loading_more {
+                  .loading {
+                        color: var(--primary-color);
+                  }
+            }
       }
 }
 
