--- a/src/themes/preset/index.less
+++ b/src/themes/preset/index.less
@@ -19,11 +19,6 @@ body {
       height: 0px;
 }
 
-.ps__rail-y,
-.ps__rail-x {
-      z-index: 10;
-}
-
 .ant-back-top {
       @media screen and (max-width:840px) {
             width: 30px !important;
@@ -134,6 +129,7 @@ body {
             }
 
             .ant-modal-footer {
+                  padding: 16px 24px;
                   border-top: @border_divide;
             }
 
