--- a/src/themes/skins/default.less
+++ b/src/themes/skins/default.less
@@ -2,8 +2,8 @@
 
 //antd variables
 @primary-color: #f44336;
-@border-radius-base: 6px;
-@border-radius-sm: 6px;
+@border-radius-base: 0px;
+@border-radius-sm: 0px;
 @shadow-color: rgba(0, 0, 0, 0.05);
 @shadow-1-down: 4px 4px 40px @shadow-color;
 @border-color-split: @color_border_divide;
@@ -32,7 +32,7 @@
 @color_unimportant_1: #aaa;
 @color_unimportant_2: #ddd;
 @color_danger: #F44336;
-@radius_normal: 6px;
+@radius_normal: 0px;
 @box_shadow_section: 0 3px 8px 0 rgba(116, 129, 141, 0.1);
 @box_shadow_unit: 0px 0px 30px #ddd;
 @border_section: 1px solid @color_border_section;
@@ -46,6 +46,7 @@
 
       --color_background: @color_background;
       --color_unimportant_2: @color_unimportant_2;
+      --border_divide: @border_divide;
       --radius_normal: @radius_normal;
 
       --light_box_shadow_card: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1.5px -2px rgba(0, 0, 0, 0.1);
