[add] support analysis data

--- a/src/layouts/components/Modal/index.less
+++ b/src/layouts/components/Modal/index.less
@@ -6,40 +6,45 @@
 
             .ant-modal-header {
                   padding: 16px 20px;
-                  background-color: whitesmoke;
                   border: none;
             }
 
             .ant-modal-body {
                   padding: 0;
+            }
+
+            .settings_wrap {
                   background-color: white;
-            }
 
-            .setting_item {
-                  padding: 12px 20px;
-                  border-top: 1px solid whitesmoke;
-            }
-
-            .option_items {
-                  .option_item {
-                        flex: 1;
-                        padding: 24px 0;
-                        padding-bottom: 20px;
-                        border-radius: var(--radius_normal);
-
-                        &:hover {
-                              background-color: var(--light_bg_hover);
-                        }
-
-                        .name {
-                              margin-top: 6px;
+                  .setting_item {
+                        padding: 12px 20px;
+                        border-top: 1px solid whitesmoke;
+                  }
+      
+                  .option_items {
+                        .option_item {
+                              flex: 1;
+                              padding: 24px 0;
+                              padding-bottom: 20px;
+                              border-radius: var(--radius_normal);
+      
+                              &:hover {
+                                    background-color: var(--light_bg_hover);
+                              }
+      
+                              .name {
+                                    margin-top: 6px;
+                              }
                         }
                   }
             }
 
             .clear_wrap {
                   padding: 20px;
-                  background-color: whitesmoke;
+            }
+
+            .analysis_wrap {
+                  padding: 20px;
             }
       }
 }
