--- a/src/pages/index/components/Qas/index.less
+++ b/src/pages/index/components/Qas/index.less
@@ -53,7 +53,8 @@
                   }
             }
 
-            .icon_edit_wrap,.icon_toggle_wrap {
+            .icon_edit_wrap,
+            .icon_toggle_wrap {
                   margin-right: -10px;
             }
 
@@ -76,7 +77,7 @@
                                     width: 40px;
                               }
                         }
-                     
+
                   }
 
                   .q_foot {
@@ -105,6 +106,63 @@
                               color: var(--primary-color);
                         }
                   }
+            }
+      }
+}
+
+.markdown {
+      color: #24292e;
+
+      :global {
+
+            h1,
+            h2,
+            h3,
+            h4,
+            h5,
+            h6 {
+                  margin-top: 24px;
+                  margin-bottom: 16px;
+                  font-weight: 600;
+                  line-height: 1.25;
+            }
+
+            h1,
+            h2 {
+                  padding-bottom: .3em;
+                  border-bottom: 1px solid #eaecef;
+            }
+
+            h1 {
+                  font-size: 2em;
+            }
+
+            ol,
+            ul {
+                  padding-left: 2em;
+                  margin-top: 10px;
+            }
+
+            pre {
+                  padding: 16px;
+                  overflow: auto;
+                  font-size: 85%;
+                  line-height: 1.45;
+                  background-color: #f6f8fa;
+                  border-radius: 3px;
+            }
+
+            code,
+            tt {
+                  padding: .2em .4em;
+                  background-color: rgba(27, 31, 35, .05);
+                  border-radius: 3px;
+            }
+
+            p {
+                  margin-top: 10px;
+                  margin-bottom: 16px;
+                  line-height: 1.8;
             }
       }
 }
