--- a/src/themes/skins/default.less
+++ b/src/themes/skins/default.less
@@ -1,6 +1,8 @@
 // https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
+@import '../preset/helpers/colorPalette.less';
 
 //antd variables
+
 @primary-color: #f44336;
 @border-radius-base: 6px;
 @border-radius-sm: 6px;
