--- a/src/pages/index/components/Modal/index.less
+++ b/src/pages/index/components/Modal/index.less
@@ -1,4 +1,18 @@
 ._local {
+      &.dark {
+            :global {
+                  .answer {
+                        .ant-input {
+                              background-color: transparent;
+                        }
+                  }
+
+                  .ant-tag {
+                        background-color: #333333;
+                  }
+            }
+      }
+
       :global {
             .answer {
                   min-height: 50vh;
