--- a/src/themes/skins/default.less
+++ b/src/themes/skins/default.less
@@ -2,7 +2,6 @@
 @import '../preset/helpers/colorPalette.less';
 
 //antd variables
-
 @primary-color: #f44336;
 @border-radius-base: 6px;
 @border-radius-sm: 6px;
@@ -53,4 +52,7 @@
 
       --light_box_shadow_card: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1.5px -2px rgba(0, 0, 0, 0.1);
       --light_bg_hover: rgba(0, 0, 0, 0.22);
+
+      //dark_mode
+      --dark_color_block: #292a2d;
 }
