--- a/src/themes/skins/default.less
+++ b/src/themes/skins/default.less
@@ -3,12 +3,14 @@
 
 //antd variables
 @primary-color: #f44336;
+@body-background: #f8f9fa;
+@component-background: #ffffff;
 @border-radius-base: 6px;
 @border-radius-sm: 6px;
 @shadow-color: rgba(0, 0, 0, 0.05);
 @shadow-1-down: 4px 4px 40px @shadow-color;
-@border-color-split: @color_border_divide;
-@border-color-base: @color_border_divide;
+@border-color-split:whitesmoke;
+@border-color-base: whitesmoke;
 @font-size-base: 13px;
 @success-color: #52c41a;
 @warning-color: #faad14;
@@ -26,17 +28,16 @@
 
 //custom variables
 @secondary-color: #cb2013;
-@color_background: #f8f9fa;
+@color_background: @body-background;
 @color_border_section: #d4dadf;
 @color_border_light: #eeeeee;
-@color_border_divide: whitesmoke;
+@color_border_divide: @border-color-split;
 @color_unimportant_1: #aaa;
 @color_unimportant_2: #ddd;
 @color_danger: #F44336;
 @radius_normal: 6px;
 @box_shadow_section: 0 3px 8px 0 rgba(116, 129, 141, 0.1);
 @box_shadow_unit: 0px 0px 30px #ddd;
-@border_section: 1px solid @color_border_section;
 @border_divide: 1px solid @color_border_divide;
 
 //global variables
