--- a/src/themes/skins/default.less
+++ b/src/themes/skins/default.less
@@ -31,14 +31,13 @@
 @color_background: @body-background;
 @color_border_section: #d4dadf;
 @color_border_light: #eeeeee;
-@color_border_divide: @border-color-split;
 @color_unimportant_1: #aaa;
 @color_unimportant_2: #ddd;
 @color_danger: #F44336;
 @radius_normal: 6px;
 @box_shadow_section: 0 3px 8px 0 rgba(116, 129, 141, 0.1);
 @box_shadow_unit: 0px 0px 30px #ddd;
-@border_divide: 1px solid @color_border_divide;
+@border_divide: 1px solid @border-color-split;
 
 //global variables
 :root {
