--- a/src/pages/index/components/Qas/index.less
+++ b/src/pages/index/components/Qas/index.less
@@ -56,7 +56,7 @@
                         background-color: var(--light_bg_hover);
                   }
 
-                  &.disabled{
+                  &.disabled {
                         opacity: 0.1;
                   }
             }
@@ -73,7 +73,7 @@
 
                   .q_head {
                         padding: 10px 20px;
-                        border-bottom: var(--border_divide);
+                        border-bottom: 1px solid @border-color-split;
 
                         .left {
 
@@ -101,11 +101,11 @@
                   transform-origin: top;
                   animation: show 0.3s ease;
                   padding: 16px 20px;
-                  border-top: var(--border_divide);
+                  border-top: 1px solid @border-color-split;
                   overflow-y: scroll;
             }
 
-            &.dark{
+            &.dark {
                   :global {
                         .a_foot {
                               background-color: rgba(0, 0, 0, 0.1);
