--- a/src/themes/preset/index.less
+++ b/src/themes/preset/index.less
@@ -30,6 +30,10 @@ body {
       }
 }
 
+.ant-btn{
+      border-color: @border-color-split;
+}
+
 .ant-select-dropdown {
       .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
             background-color: transparent;
@@ -83,7 +87,7 @@ body {
 
             .ant-modal-header {
                   background-color: transparent;
-                  border-bottom: @border_divide;
+                  border-bottom: 1px solid @border-color-split;
 
                   .ant-modal-title {
                         color: @text-color;
@@ -92,7 +96,7 @@ body {
 
             .ant-modal-footer {
                   padding: 16px 24px;
-                  border-top: @border_divide;
+                  border-top: 1px solid @border-color-split;
             }
 
             .ant-menu-submenu-popup {
