--- a/src/themes/skins/default.less
+++ b/src/themes/skins/default.less
@@ -9,7 +9,7 @@
 @border-radius-sm: 6px;
 @shadow-color: rgba(0, 0, 0, 0.05);
 @shadow-1-down: 4px 4px 40px @shadow-color;
-@border-color-split:whitesmoke;
+@border-color-split: whitesmoke;
 @border-color-base: whitesmoke;
 @font-size-base: 13px;
 @success-color: #52c41a;
@@ -54,3 +54,14 @@
       //dark_mode
       --dark_color_block: #292a2d;
 }
+
+@text-color: #ffffff;
+@disabled-color: #333333;
+@item-hover-bg: #333333;
+@component-background: #202124;
+@background-color-light: #333333;
+@background-color-base: #333333;
+@text-color-secondary: #333333;
+@body-background: #202124;
+@border-color-base: #242424;
+@border-color-split: #242424;
