--- a/src/themes/skins/default.less
+++ b/src/themes/skins/default.less
@@ -55,13 +55,18 @@
       --dark_color_block: #292a2d;
 }
 
-@text-color: #ffffff;
-@disabled-color: #333333;
-@item-hover-bg: #333333;
-@component-background: #202124;
-@background-color-light: #333333;
-@background-color-base: #333333;
-@text-color-secondary: #333333;
-@body-background: #202124;
-@border-color-base: #242424;
-@border-color-split: #242424;
+// @text-color: #ffffff;
+// @disabled-color: #333333;
+// @item-hover-bg: #333333;
+// @component-background: #202124;
+// @background-color-light: #333333;
+// @background-color-base: #333333;
+// @text-color-secondary: #333333;
+// @body-background: #202124;
+
+.TextColor(@text-color) when (@text-color ='#ffffff') {
+      @border-color-base: #242424;
+      @border-color-split: #242424;
+}
+
+.TextColor(@text-color)
