--- a/src/themes/skins/default.less
+++ b/src/themes/skins/default.less
@@ -63,10 +63,5 @@
 // @background-color-base: #333333;
 // @text-color-secondary: #333333;
 // @body-background: #202124;
-
-.TextColor(@text-color) when (@text-color ='#ffffff') {
-      @border-color-base: #242424;
-      @border-color-split: #242424;
-}
-
-.TextColor(@text-color)
+// @border-color-base: #242424;
+// @border-color-split: #242424;
