--- a/src/themes/skins/default.less
+++ b/src/themes/skins/default.less
@@ -3,19 +3,14 @@
 
 //antd variables
 @primary-color: #f44336;
-@body-background: #f8f9fa;
-@component-background: #ffffff;
 @border-radius-base: 6px;
 @border-radius-sm: 6px;
 @shadow-color: rgba(0, 0, 0, 0.05);
 @shadow-1-down: 4px 4px 40px @shadow-color;
-@border-color-split: whitesmoke;
-@border-color-base: whitesmoke;
 @font-size-base: 13px;
 @success-color: #52c41a;
 @warning-color: #faad14;
 @error-color: #f5222d;
-@text-color: #000;
 @hover-color: #eee;
 @table-row-hover-bg: white;
 @dark-half: #494949;
@@ -29,7 +24,6 @@
 //custom variables
 @secondary-color: #cb2013;
 @color_background: @body-background;
-@color_border_section: #d4dadf;
 @color_border_light: #eeeeee;
 @color_unimportant_1: #aaa;
 @color_unimportant_2: #ddd;
@@ -37,6 +31,26 @@
 @radius_normal: 6px;
 @box_shadow_section: 0 3px 8px 0 rgba(116, 129, 141, 0.1);
 @box_shadow_unit: 0px 0px 30px #ddd;
+
+
+//light theme variables
+@text-color: #000;
+@body-background: #f8f9fa;
+@component-background: #ffffff;
+// @border-color-split: whitesmoke;
+// @border-color-base: whitesmoke;
+
+//dark theme varialbles
+// @text-color: #ffffff;
+// @disabled-color: #333333;
+// @item-hover-bg: #333333;
+// @component-background: #202124;
+// @background-color-light: #333333;
+// @background-color-base: #333333;
+// @text-color-secondary: #333333;
+// @body-background: #202124;
+// @border-color-base: #242424;
+// @border-color-split: #242424;
 
 //global variables
 :root {
@@ -54,14 +68,3 @@
       //dark_mode
       --dark_color_block: #292a2d;
 }
-
-// @text-color: #ffffff;
-// @disabled-color: #333333;
-// @item-hover-bg: #333333;
-// @component-background: #202124;
-// @background-color-light: #333333;
-// @background-color-base: #333333;
-// @text-color-secondary: #333333;
-// @body-background: #202124;
-// @border-color-base: #242424;
-// @border-color-split: #242424;
